Update images to relative path

--- a/Exploring 67 years of LEGO/notebook.ipynb
+++ b/Exploring 67 years of LEGO/notebook.ipynb
@@ -19,7 +19,7 @@
     "## 1. Introduction\n",
     "<p>Everyone loves Lego (unless you ever stepped on one). Did you know by the way that \"Lego\" was derived from the Danish phrase leg godt, which means \"play well\"? Unless you speak Danish, probably not. </p>\n",
     "<p>In this project, we will analyze a fascinating dataset on every single lego block that has ever been built!</p>\n",
-    "<p><img src=\"https://s3.amazonaws.com/assets.datacamp.com/production/project_10/datasets/lego-bricks.jpeg\" alt=\"lego\"></p>"
+    "![lego](images/lego-bricks.jpeg)"
    ]
   },
   {
@@ -57,7 +57,7 @@
    "source": [
     "## 2. Reading Data\n",
     "<p>A comprehensive database of lego blocks is provided by <a href=\"https://rebrickable.com/downloads/\">Rebrickable</a>. The data is available as csv files and the schema is shown below.</p>\n",
-    "<p><img src=\"https://s3.amazonaws.com/assets.datacamp.com/production/project_10/datasets/downloads_schema.png\" alt=\"schema\"></p>\n",
+    "![schema](images/downloads_schema.png)"
     "<p>Let us start by reading in the colors data to get a sense of the diversity of lego sets!</p>"
    ]
   },
