Fix comma issue

--- a/Exploring 67 years of LEGO/notebook.ipynb
+++ b/Exploring 67 years of LEGO/notebook.ipynb
@@ -57,7 +57,7 @@
    "source": [
     "## 2. Reading Data\n",
     "<p>A comprehensive database of lego blocks is provided by <a href=\"https://rebrickable.com/downloads/\">Rebrickable</a>. The data is available as csv files and the schema is shown below.</p>\n",
-    "![schema](images/downloads_schema.png)"
+    "![schema](images/downloads_schema.png)",
     "<p>Let us start by reading in the colors data to get a sense of the diversity of lego sets!</p>"
    ]
   },
